fix viewport overflow issue

--- a/src/styles/ample-alerts.less
+++ b/src/styles/ample-alerts.less
@@ -24,6 +24,7 @@ body {
         right: 0;
         width: 300px;
         margin: 5px;
+        overflow: hidden;
 
         .ample-alert {
             .box-sizing(border-box);
